--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,18 +1,30 @@
 ﻿<Window x:Class="SharpScript.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow"
+        Width="525"
+        Height="350">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="70"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="70" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="25" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBox x:Name="Url" Text="d:\Docs\Visual Studio 2012\Projects\WpfApplication1\WpfApplication1\test.html" Grid.Row="0" Grid.Column="0" />
-        <Button Content="Go" IsDefault="True" Grid.Row="0" Grid.Column="1" Click="Go_Click" />
-        <WebBrowser x:Name="Browser" Grid.Row="1" Grid.ColumnSpan="2" Navigated="Browser_Navigated" />
+        <TextBox x:Name="Url"
+                 Grid.Row="0"
+                 Grid.Column="0"
+                 Text="d:\Docs\Visual Studio 2012\Projects\WpfApplication1\WpfApplication1\test.html" />
+        <Button Grid.Row="0"
+                Grid.Column="1"
+                Click="Go_Click"
+                Content="Go"
+                IsDefault="True" />
+        <WebBrowser x:Name="Browser"
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Navigated="Browser_Navigated" />
     </Grid>
 </Window>
